--- a/product_variant_sale_price/views/product_views.xml
+++ b/product_variant_sale_price/views/product_views.xml
@@ -8,7 +8,7 @@
             <field name="list_price" position="after">
                 <div
                     name="fix_price_tooltip"
-                    attrs="{'invisible': ['|', ('product_variant_count', '=', 1), ('is_product_variant', '=', True)]}"
+                    invisible="product_variant_count == 1 or is_product_variant"
                 >
                     <span
                         class="text-muted fst-italic"
