--- a/product_variant_configurator/views/product_configurator_attribute.xml
+++ b/product_variant_configurator/views/product_configurator_attribute.xml
@@ -4,22 +4,22 @@
         <field name="model">product.configurator.attribute</field>
         <field name="arch" type="xml">
             <tree create="0" delete="0" editable="bottom">
-                <field name="owner_id" invisible="1" />
-                <field name="owner_model" invisible="1" />
+                <field name="owner_id" column_invisible="1" />
+                <field name="owner_model" column_invisible="1" />
                 <field name="attribute_id" />
                 <field
                     name="possible_value_ids"
                     widget="many2many_tags"
-                    invisible="1"
+                    column_invisible="1"
                 />
-                <field name="product_tmpl_id" invisible="1" />
+                <field name="product_tmpl_id" column_invisible="1" />
                 <field
                     name="value_id"
                     context="{'show_attribute': False, 'default_attribute_id': attribute_id, 'template_for_attribute_value': product_tmpl_id}"
                 />
                 <field
                     name="price_extra"
-                    invisible="not context.get('show_price_extra', False)"
+                    column_invisible="not context.get('show_price_extra', False)"
                 />
             </tree>
         </field>
