[FIX] product_variant_sale_price: edit Sales Price

--- a/product_variant_sale_price/views/product_views.xml
+++ b/product_variant_sale_price/views/product_views.xml
@@ -23,7 +23,7 @@
         <field name="arch" type="xml">
             <!-- Make the field editable -->
             <field name="lst_price" position="attributes">
-                <attribute name="attrs" />
+                <attribute name="readonly" />
             </field>
         </field>
     </record>
